manifests/manifest_dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}-dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CI_PROJECT_NAME}-dev
  namespace: ${NAMESPACE}-dev
  labels:
    app: ${CI_PROJECT_NAME}-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CI_PROJECT_NAME}-dev
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}-dev
    spec:
      containers:
        - name: ${CI_PROJECT_NAME}-dev
          image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
      imagePullSecrets:
        - name: ${CI_PROJECT_NAME}-secret-dev

---
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}-service-dev
  namespace: ${NAMESPACE}-dev
spec:
  selector:
    app: ${CI_PROJECT_NAME}-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-ingress-dev
  namespace: ${NAMESPACE}-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /${CI_PROJECT_NAME}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${CI_PROJECT_NAME}-service-dev
                port:
                  number: 8080
