manifests/manifest_prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CI_PROJECT_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${CI_PROJECT_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CI_PROJECT_NAME}
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}
    spec:
      containers:
        - name: ${CI_PROJECT_NAME}
          image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
      imagePullSecrets:
        - name: ${CI_PROJECT_NAME}-secret

---
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${CI_PROJECT_NAME}
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /${CI_PROJECT_NAME}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${CI_PROJECT_NAME}-service
                port:
                  number: 8080
